--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <title>Hello WebSocket</title>
     <script src="../js/sockjs-0.3.4.js"></script>
     <script src="../js/stomp.js"></script>
+    <!-- <script src="../js/draw-canvas.js"></script> -->
     <script type="text/javascript">
         var stompClient = null;
         
@@ -61,6 +62,9 @@
         <button id="sendName" onclick="sendName();">Send</button>
         <p id="response"></p>
     </div>
+    
+    <canvas id="canvasInAPerfectWorld" width="490" height="220"></canvas>
+    
 </div>
 </body>
 </html>
